--- a/jcart-administration-front/product-create.html
+++ b/jcart-administration-front/product-create.html
@@ -21,7 +21,7 @@
         <el-input v-model="description" placeholder="请输入描述"></el-input>
 
         <el-select v-model="selectedStatus" placeholder="请选择状态">
-            <el-option v-for="item in status" :key="item.value" :label="item.label" :value="item.value">
+            <el-option v-for="item in statuses" :key="item.value" :label="item.label" :value="item.value">
             </el-option>
         </el-select>
 
