--- a/jcart-administration-front/customer-search.html
+++ b/jcart-administration-front/customer-search.html
@@ -9,6 +9,20 @@
 </head>
 <body>
     <div id="app">
+        <el-input v-model="userName" placeholder="请输入用户名"></el-input>
+        <el-input v-model="realName" placeholder="请输入姓名"></el-input>
+        <el-input v-model="mobile" placeholder="请输入手机号"></el-input>
+        <el-input v-model="email" placeholder="请输入邮箱"></el-input>
+        <br>
+
+        <el-select v-model="selectedStatus" placeholder="请选择状态">
+            <el-option v-for="item in statuses" :key="item.value" :label="item.label" :value="item.value">
+            </el-option>
+        </el-select>
+        <br>
+        <el-button type="primary" @click="handleSearchClick">搜索</el-button>
+        <el-button type="primary" @click="handleClearClick">清空条件</el-button>
+
         <el-table :data="pageInfo.list" style="width: 100%">
             <el-table-column prop="username" label="客户用户名">
             </el-table-column>
