update administration customer search page

--- a/jcart-administration-front/customer-search.html
+++ b/jcart-administration-front/customer-search.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="app">
-        <el-input v-model="userName" placeholder="请输入用户名"></el-input>
+        <el-input v-model="username" placeholder="请输入用户名"></el-input>
         <el-input v-model="realName" placeholder="请输入姓名"></el-input>
         <el-input v-model="mobile" placeholder="请输入手机号"></el-input>
         <el-input v-model="email" placeholder="请输入邮箱"></el-input>
