--- a/jcart-administration-front/product-search.html
+++ b/jcart-administration-front/product-search.html
@@ -25,6 +25,9 @@
 
         <el-table :data="pageInfo.list" style="width: 100px">
             <el-table-column prop="mainPicUrl" label="主图">
+                <template slot-scope="scope">
+                    <el-image style="width: 100px; height: 100px" :src="scope.row.mainPicUrl" fit="fit"></el-image>
+                </template>
             </el-table-column>
             <el-table-column prop="productCode" label="商品代码">
             </el-table-column>
