--- a/jcart-store-front/product-search.html
+++ b/jcart-store-front/product-search.html
@@ -10,7 +10,11 @@
 <body>
     <div id="app">
         <el-table :data="pageInfo.list" style="width: 100%">
-            <el-table-column prop="mainPicUrl" label="主图"></el-table-column>
+            <el-table-column prop="mainPicUrl" label="主图">
+                <template slot-scope="scope">
+                    <el-image style="width: 100px; height: 100px" :src="scope.row.mainPicUrl" fit="fill"></el-image>
+                </template>
+            </el-table-column>
             <el-table-column prop="productName" label="商品名称"></el-table-column>
             <el-table-column prop="productAbstract" label="商品摘要"></el-table-column>
             <el-table-column prop="price" label="价格">
