fix administration product page

--- a/jcart-administration-front/product-update.html
+++ b/jcart-administration-front/product-update.html
@@ -45,7 +45,7 @@
          <br>
          <div>
              <el-link v-for="item in otherPicUrls" type="primary">{{item}}</el-link><br>
-             <el-image style="width: 60px; height: 60px" :src="item" :fit="fit"></el-image>
+             <el-image style="width: 60px; height: 60px" :src="item" fit="fill"></el-image>
              <br>
          </div>
          <br>
