--- a/jcart-administration-front/menu-navigate.html
+++ b/jcart-administration-front/menu-navigate.html
@@ -31,6 +31,7 @@
                     <jc-order-search-page v-if="selectMainPage == '3-3'"></jc-order-search-page>
                     <jc-return-search-page v-if="selectMainPage == '3-4'"></jc-return-search-page>
                     <jc-administrator-index-page v-if="selectMainPage == '4-5'"></jc-administrator-index-page>
+                    <jc-product-update-page v-if="selectMainPage == '1-6'"></jc-product-update-page>
                 </el-main>
             </el-container>
         </el-container>
