--- a/jcart-administration-front/menu-navigate.html
+++ b/jcart-administration-front/menu-navigate.html
@@ -11,10 +11,21 @@
 <body>
     <div id="app">
         <el-container>
-            <el-header>JCart电商系统</el-header>
+            <el-header>
+                JCart电商系统
+                <el-dropdown style="float: right;" @command="handleMyItemClick">
+                    <span class="el-dropdown-link">
+                        我的<i class="el-icon-arrow-down el-icon--right"></i>
+                    </span>
+                    <el-dropdown-menu slot="dropdown">
+                        <el-dropdown-item v-for="item in my" :key="item.route" :divided="item.divided" :command="item.route">{{item.name}}</el-dropdown-item>
+                    </el-dropdown-menu>
+                </el-dropdown>
+            </el-header>
             <el-container>
                 <el-aside width="200px">
-                    <el-menu unique-opened background-color="#545c64" text-color="#fff" active-text-color="#ffd04b" @select="handleMenuItemSelect">
+                    <!--<el-menu unique-opened background-color="#545c64" text-color="#fff" active-text-color="#ffd04b" @select="handleMenuItemSelect">-->
+                    <el-menu unique-opened background-color="#545c64" text-color="#fff" active-text-color="#ffd04b">
                         <el-submenu v-for="subMenu in subMenus" :key="subMenu.index" :index="subMenu.index">
                             <template slot="title">
                                 <i :class="subMenu.icon"></i>
@@ -51,8 +62,24 @@
     <script src="route-page/return-search-page.js"></script>
     <script src="route-page/administrator-index-page.js"></script>-->
 
-    <script src="route-page/product-search-page.js"></script>
-    <script src="route-page/product-search-page.js"></script>
+    <script src="route-page/administrator-update-profile-route-page.js"></script>
+    <script src="route-page/administrator-index-route-page.js"></script>
+    <script src="route-page/administrator-create-route-page.js"></script>
+    <script src="route-page/administrator-update-route-page.js"></script>
+
+    <script src="route-page/product-search-route-page.js"></script>
+    <script src="route-page/product-create-route-page.js"></script>
+    <script src="route-page/product-update-route-page.js"></script>
+
+    <script src="route-page/customer-search-route-page.js"></script>
+    <script src="route-page/customer-show-route-page.js"></script>
+    <script src="route-page/address-index-route-page.js"></script>
+    <script src="route-page/address-show-route-page.js"></script>
+
+    <script src="route-page/order-search-route-page.js"></script>
+    <script src="route-page/return-search-route-page.js"></script>
+
+    <script src="route-page/router.js"></script>
 
     <script src="viewmodels/menu-navigate.js"></script>
 </body>
